--- a/index.html
+++ b/index.html
@@ -1,20 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Speed Typing</title>
-</head>
-<body>
-    <div class="timer"></div>
-    <div class="container">
-        <div class="text-display">
-        </div>
-        <textarea class="text-input" autofocus></textarea>
-        
+  </head>
+  <body>
+    <div class="top">
+      <nav>
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a class="kiwi-logo" href="#">🥝</a>
+                    <a class="kiwitype" href="#">
+                        <span class="kiwi-word">kiwi</span> type</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#">contact</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#">scores</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#">frenchmike</a>
+                </li>
+            </ul>
+      </nav>
+      </div>
     </div>
+    <div class="middle">
+        <div class="timer"></div>
+        <div class="text"></div>
+    </div>
+    <div class="bottom">
+        Copyright &copy; <script>document.write(new Date().getFullYear());</script>, Michael Seutin
+    </div>
+
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
