--- a/index.html
+++ b/index.html
@@ -7,34 +7,70 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>Speed Typing</title>
   </head>
+
   <body>
     <div class="top">
       <nav>
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a class="kiwi-logo" href="#">🥝</a>
-                    <a class="kiwitype" href="#">
-                        <span class="kiwi-word">kiwi</span> type</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#">contact</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#">scores</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#">frenchmike</a>
-                </li>
-            </ul>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="kiwi-logo" href="#">🥝</a>
+            <a class="kiwitype" href="#">
+              <span class="kiwi-word">kiwi</span> type</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="#">home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">scores</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">games</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">sound</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">settings</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">merch</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">plans</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">donate</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">sign-in</a>
+          </li>
+        </ul>
       </nav>
+      <div class="timers">
+        <span>15s</span>
+        <span class="timer-selection">30s</span>
+        <span>60s</span>
+        <span>120s</span>
       </div>
     </div>
     <div class="middle">
-        <div class="timer"></div>
-        <div class="text"></div>
+      <div class="timer"></div>
+      <div class="text"></div>
     </div>
-    <div class="bottom">
-        Copyright &copy; <script>document.write(new Date().getFullYear());</script>, Michael Seutin
+
+    <!-- FOOTER -->
+    <div class="footer">
+      <div class="footer-content">
+        <div>
+          Copyright &copy;
+          <script>
+            document.write(new Date().getFullYear());
+          </script>
+          , Michael Seutin
+        </div>
+        <div>📇 contact</div>
+      </div>
     </div>
 
     <script src="./index.js"></script>
