--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         </ul>
       </nav>
       <div class="timers">
-        <span>15s</span>
-        <span class="timer-selection">30s</span>
-        <span>60s</span>
-        <span>120s</span>
+        <span class="seconds fifteen">15s</span>
+        <span class="seconds thirty timer-selection">30s</span>
+        <span class="seconds sixty">60s</span>
+        <span class="seconds hundred-twenty">120s</span>
       </div>
     </div>
     <div class="middle">
